# tennis-video-arbitration

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
docs/: USAGE.md
docs/examples/: points_2d_template.json  points_3d_tennis_court.json
scripts/: plot_3d_csv.py  select_points.py
tennis_arbitration/: __init__.py  ball_detection.py  calibration.py  cli.py  court_detection.py  io.py  triangulation.py
tests/: test_geometry.py
