[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tennis-video-arbitration"
version = "0.1.0"
description = "Simplified video arbitration (Hawk-Eye-like) pipeline for tennis: ball detection, court line detection, calibration and triangulation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Nicolas Neble" }]

dependencies = [
  "numpy>=1.23",
  "opencv-python>=4.8",
  "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4",
  "ruff>=0.6",
  "black>=24.0",
  "mypy>=1.8",
  "pre-commit>=3.6",
]

[project.scripts]
tennis-arb = "tennis_arbitration.cli:main"

[tool.setuptools]
packages = ["tennis_arbitration"]

[tool.black]
line-length = 100
extend-exclude = "(legacy|data|outputs)"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["legacy", "data", "outputs"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
addopts = "-q"
